# mcp-wx-chatinsight

./: README-zh.md  README.md  ddl.txt  pyproject.toml
src/mcp_wx_chatinsight/: __init__.py  prompt.py  report.py  server.py
tests/: __init__.py
