[project]
name = "mcp-wx-chatinsight"
version = "0.1.0"
description = "MCP WX Insight Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "fastmcp>=2.2.7",
    "graspologic>=3.4.1",
    "lightrag-hku>=1.3.6",
    "mcp[cli]>=1.7.1",
    "nano-vectordb>=0.0.4.3",
    "network>=0.1",
    "networkx>=3.4.2",
    "ollama>=0.4.8",
    "openai>=1.77.0",
    "wcwidth>=0.2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp-wx-chatinsight = "mcp_wx_chatinsight:main"

